# Hlusra

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  widget.html
docs/: code-review-consolidated.md  design-mockup-v2.html  design-mockup.html  review-critical.md  review-important.md  review-suggestions.md
docs/superpowers/plans/: 2026-03-14-hlusra-mvp.md
docs/superpowers/specs/: 2026-03-13-recorder-module-design.md  2026-03-14-library-module-design.md  2026-03-14-rag-chat-module-design.md  2026-03-14-settings-export-module-design.md  2026-03-14-transcription-module-design.md
src/: App.tsx  widget.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/export/: audio.rs  commands.rs  mod.rs  transcript.rs  types.rs  video.rs
src-tauri/src/rag/: chat.rs  chunker.rs  commands.rs  embeddings.rs  mod.rs  prompt.rs  types.rs  vector_store.rs
src-tauri/src/recorder/: capture.rs  commands.rs  encode.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/settings/: commands.rs  config.rs  defaults.rs  mod.rs
src-tauri/src/transcription/: api.rs  commands.rs  local.rs  mod.rs  models.rs  orchestrator.rs  provider.rs  types.rs
src/components/: ChatPanel.tsx  ExportDialog.tsx  Gallery.tsx  MeetingCard.tsx  MeetingPage.tsx  RecordButton.tsx  RecordingWidget.tsx  SettingsPage.tsx  TranscriptView.tsx
src/lib/: api.ts  format.ts
src/styles/: app.css
