[package]
name = "hlusra"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
thiserror = "2"
dirs = "6"
toml = "0.8"

# Recorder
gstreamer = "0.25"
gstreamer-video = "0.25"
gstreamer-audio = "0.25"
ashpd = { version = "0.13", features = ["tokio", "screencast"] }

# Transcription
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "blocking"] }
hound = "3.5"

# Export
genpdf = "0.2"

# RAG
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
